// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`TodayForNL snapshots should match snapshot with empty state 1`] = `
<section
  class="max-w-[720px] mx-auto mt-4 px-6"
>
  <div
    class="rounded-xl p-4"
    style="background: rgba(255, 255, 255, 0.03); border: 1px solid rgba(255, 255, 255, 0.08);"
  >
    <div
      class="text-[11px] font-bold uppercase tracking-[2px] text-oranje mb-2"
    >
      Vandaag voor Team NL
    </div>
    <div
      class="text-sm text-white/55"
    >
      Geen komende Team NL evenementen gevonden.
    </div>
  </div>
</section>
`;

exports[`TodayForNL snapshots should match snapshot with upcoming event and medal update 1`] = `
<section
  class="max-w-[720px] mx-auto mt-4 px-6"
>
  <div
    class="rounded-xl p-4"
    style="background: rgba(255, 255, 255, 0.03); border: 1px solid rgba(255, 255, 255, 0.08);"
  >
    <div
      class="text-[11px] font-bold uppercase tracking-[2px] text-oranje mb-2"
    >
      Vandaag voor Team NL
    </div>
    <div
      class="text-sm text-white/85"
    >
      <span
        class="font-semibold"
      >
        Vrouwen 1500m
      </span>
      <span
        class="text-white/55"
      >
         
        · 
        Vr 13 feb
         
        16:30
         CET
      </span>
      <span
        class="ml-2 text-oranje font-semibold"
      >
        over 1u 0m 0s
      </span>
    </div>
    <div
      class="mt-2 text-xs text-white/70"
    >
      Laatste medaille-update: 
      goud 2→3 (15:12:00)
    </div>
  </div>
</section>
`;
